# rust-smtp-server

./: .env  Cargo.toml  README.md
src/: dns_resolver.rs  main.rs
